SOHO-7894 - Fixed error-icon was not aligning with Target To Achievement Charts http://localhost:4000/components/targeted-achievement/example-index

--- a/components/charts/_charts.scss
+++ b/components/charts/_charts.scss
@@ -344,8 +344,6 @@
     height: 16px;
     margin-bottom: 1px;
     margin-right: 0;
-    right: inherit;
-    top: 0;
     width: 16px;
   }
 
